--- a/ConstructionCost/src/main/resources/log4j2.properties
+++ b/ConstructionCost/src/main/resources/log4j2.properties
@@ -16,7 +16,7 @@ appender.rolling.layout.type = PatternLayout
 appender.rolling.layout.pattern = %d{yyyy-MM-dd HH:MM:SS} %-5p %c{1}:%L - %m%n
 appender.rolling.policies.type = Policies
 
-#rootLogger.appenderRef.rolling.ref = RollingFile
+rootLogger.appenderRef.rolling.ref = RollingFile
 
 #appender.rolling.type = RollingFile
 #appender.rolling.name = htmlLogs
